<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tours">

    <fragment
        android:id="@+id/navigation_tour_market"
        android:name="com.tourtrek.fragments.TourMarketFragment"
        android:label="@string/title_tour_market"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tours"
        android:name="com.tourtrek.fragments.ToursFragment"
        android:label="@string/title_tours"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tourtrek.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>